# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pydsol-model"
version = "1.0.0"
description = "Predefined objects library for a Python discrete-event simulation model (pydsol-core)"
readme = "README.rst"
authors = [{ name = "Isabelle van Schilt", email = "isabellevanschilt@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["simulation", "discrete-event", "model"]
dependencies = [ "pydsol-core", "numpy"
]
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
documentation = "https://pydsol-model.readthedocs.io/en/latest/index.html"
repository = "https://github.com/imvs95/pydsol-model"